# pydanticAI-bashSummaryAgent-sandbox

./: .gitignore  README.md  agent.py  config.py  main.py  pyproject.toml  server.py  test_sandbox.py  workflow.py
sandbox/: __init__.py  context.py  gong_client.py  mock_data.py  models.py  setup.py
